--- a/savethedate/css/style.css
+++ b/savethedate/css/style.css
@@ -1350,9 +1350,9 @@ form label {
   color: rgba(255, 255, 255, 0.5);
 }
 #fh5co-started .form-control {
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.8);
   border: none !important;
-  color: #fff;
+  color: #3d3d3d;
   font-size: 16px !important;
   width: 100%;
   -webkit-transition: 0.5s;
@@ -1360,21 +1360,21 @@ form label {
   transition: 0.5s;
 }
 #fh5co-started .form-control::-webkit-input-placeholder {
-  color: #fff;
+  color: #3d3d3d;
 }
 #fh5co-started .form-control:-moz-placeholder {
   /* Firefox 18- */
-  color: #fff;
+  color: #3d3d3d;
 }
 #fh5co-started .form-control::-moz-placeholder {
   /* Firefox 19+ */
-  color: #fff;
+  color: #3d3d3d;
 }
 #fh5co-started .form-control:-ms-input-placeholder {
-  color: #fff;
+  color: #3d3d3d;
 }
 #fh5co-started .form-control:focus {
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.6);
 }
 #fh5co-started .btn {
   height: 54px;
