--- a/savethedate/css/style.css
+++ b/savethedate/css/style.css
@@ -46,11 +46,6 @@ body {
   content: "";
 }
 
-@font-face {
-  font-family: '4SenDai'; /*a name to be used later*/
-  src: url('../fonts/text/TCS 4SenDai Demo.ttf'); /*URL to font*/
-}
-
 a {
   color: #F14E95;
   -webkit-transition: 0.5s;
@@ -69,9 +64,13 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "4SenDai", Arial, sans-serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
+}
+
+p, span, div {
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, sans-serif;
 }
 
 ::-webkit-selection {
@@ -108,7 +107,7 @@ h1, h2, h3, h4, h5, h6, figure {
   margin: 0;
   padding: 0;
   line-height: 40px;
-  font-family: "4SenDai", Arial, serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
 }
 .fh5co-nav a {
   padding: 5px 10px;
@@ -849,7 +848,7 @@ form label {
   margin-bottom: 0px;
   font-size: 100px;
   line-height: 1.5;
-  font-family: "4SenDai", Arial, serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
 }
 @media screen and (max-width: 768px) {
   #fh5co-header .display-tc h1,
@@ -1070,7 +1069,7 @@ form label {
   }
 }
 .couple-half h3 {
-  font-family: "4SenDai", Arial, serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
   color: #F14E95;
   font-size: 30px;
 }
@@ -1187,7 +1186,7 @@ form label {
   line-height: 1.5;
   font-weight: bold;
   color: #F14E95;
-  font-family: "4SenDai", Arial, serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
 }
 @media screen and (max-width: 768px) {
   .fh5co-heading h2 {
@@ -1652,7 +1651,7 @@ form label {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "4SenDai", Arial, sans-serif;
+  font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   -webkit-border-radius: 30px;
