ปรับข้อความใหม่ตามเบ้บขอ

--- a/savethedate/css/style.css
+++ b/savethedate/css/style.css
@@ -47,13 +47,13 @@ body {
 }
 
 a {
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   outline: none;
   text-decoration: none;
 }
@@ -75,17 +75,17 @@ p, span, div {
 
 ::-webkit-selection {
   color: #fff;
-  background: #F14E95;
+  background: rgb(238, 104, 104);
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #F14E95;
+  background: rgb(238, 104, 104);
 }
 
 ::selection {
   color: #fff;
-  background: #F14E95;
+  background: rgb(238, 104, 104);
 }
 
 .fh5co-nav {
@@ -200,7 +200,7 @@ p, span, div {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a {
-  color: #F14E95;
+  color: rgb(238, 104, 104);
 }
 .fh5co-nav ul li.btn-cta a span {
   background: #fff;
@@ -772,7 +772,7 @@ p, span, div {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -791,7 +791,7 @@ p, span, div {
   position: relative;
 }
 .fh5co-contact-info ul li:before {
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   position: absolute;
   left: 0;
   top: .05em;
@@ -883,7 +883,7 @@ form label {
 .fh5co-cover .display-tc .btn {
   padding: 15px 20px;
   background: #fff !important;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   border: none !important;
   font-size: 14px;
   text-transform: uppercase;
@@ -1047,7 +1047,7 @@ form label {
   font-size: 20px;
   background: #fff;
   padding: 20px;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -1070,7 +1070,7 @@ form label {
 }
 .couple-half h3 {
   font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   font-size: 30px;
 }
 .couple-half .groom, .couple-half .bride {
@@ -1163,7 +1163,7 @@ form label {
   height: 90px;
   font-size: 40px;
   line-height: 40px;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
 }
 .feature-center p, .feature-center h3 {
   margin-bottom: 30px;
@@ -1185,7 +1185,7 @@ form label {
   margin-bottom: 10px;
   line-height: 1.5;
   font-weight: bold;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   font-family: "Roboto Slab","IBM Plex Sans Thai", Arial, serif;
 }
 @media screen and (max-width: 768px) {
@@ -1220,7 +1220,7 @@ form label {
   display: block;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide span a.twitter {
-  color: #F14E95;
+  color: rgb(238, 104, 104);
   font-weight: 300;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide figure {
@@ -1312,7 +1312,7 @@ form label {
   display: table-cell;
   vertical-align: middle;
   font-size: 30px;
-  color: #F14E95;
+  color: rgb(238, 104, 104);
 }
 .feature-left .feature-copy {
   float: left;
@@ -1378,7 +1378,7 @@ form label {
 #fh5co-started .btn {
   height: 54px;
   border: none !important;
-  background: #F14E95;
+  background: rgb(238, 104, 104);
   color: #fff;
   font-size: 16px;
   text-transform: uppercase;
@@ -1422,7 +1422,7 @@ form label {
 }
 .owl-carousel .owl-controls .owl-dot.active span {
   background: transparent;
-  border: 2px solid #F14E95;
+  border: 2px solid rgb(238, 104, 104);
 }
 
 #fh5co-offcanvas {
@@ -1548,106 +1548,6 @@ form label {
   outline: none;
 }
 
-.fh5co-nav-toggle {
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
-  text-decoration: none;
-}
-.fh5co-nav-toggle.active i::before, .fh5co-nav-toggle.active i::after {
-  background: #444;
-}
-.fh5co-nav-toggle:hover, .fh5co-nav-toggle:focus, .fh5co-nav-toggle:active {
-  outline: none;
-  border-bottom: none !important;
-}
-.fh5co-nav-toggle i {
-  position: relative;
-  display: inline-block;
-  width: 25px;
-  height: 2px;
-  color: #252525;
-  font: bold 14px/.4 Helvetica;
-  text-transform: uppercase;
-  text-indent: -55px;
-  background: #252525;
-  transition: all .2s ease-out;
-}
-.fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {
-  content: '';
-  width: 25px;
-  height: 2px;
-  background: #252525;
-  position: absolute;
-  left: 0;
-  transition: all .2s ease-out;
-}
-.fh5co-nav-toggle.fh5co-nav-white > i {
-  color: #fff;
-  background: #fff;
-}
-.fh5co-nav-toggle.fh5co-nav-white > i::before, .fh5co-nav-toggle.fh5co-nav-white > i::after {
-  background: #fff;
-}
-
-.fh5co-nav-toggle i::before {
-  top: -7px;
-}
-
-.fh5co-nav-toggle i::after {
-  bottom: -7px;
-}
-
-.fh5co-nav-toggle:hover i::before {
-  top: -10px;
-}
-
-.fh5co-nav-toggle:hover i::after {
-  bottom: -10px;
-}
-
-.fh5co-nav-toggle.active i {
-  background: transparent;
-}
-
-.fh5co-nav-toggle.active i::before {
-  top: 0;
-  -webkit-transform: rotateZ(45deg);
-  -moz-transform: rotateZ(45deg);
-  -ms-transform: rotateZ(45deg);
-  -o-transform: rotateZ(45deg);
-  transform: rotateZ(45deg);
-}
-
-.fh5co-nav-toggle.active i::after {
-  bottom: 0;
-  -webkit-transform: rotateZ(-45deg);
-  -moz-transform: rotateZ(-45deg);
-  -ms-transform: rotateZ(-45deg);
-  -o-transform: rotateZ(-45deg);
-  transform: rotateZ(-45deg);
-}
-
-.fh5co-nav-toggle {
-  position: absolute;
-  right: 0px;
-  top: 10px;
-  z-index: 21;
-  padding: 6px 0 0 0;
-  display: block;
-  margin: 0 auto;
-  display: none;
-  height: 44px;
-  width: 44px;
-  z-index: 2001;
-  border-bottom: none !important;
-}
-@media screen and (max-width: 768px) {
-  .fh5co-nav-toggle {
-    display: block;
-  }
-}
-
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
@@ -1675,9 +1575,9 @@ form label {
 }
 
 .btn-primary {
-  background: #F14E95;
+  background: rgb(238, 104, 104);
   color: #fff;
-  border: 2px solid #F14E95;
+  border: 2px solid rgb(238, 104, 104);
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #f366a3 !important;
@@ -1685,11 +1585,11 @@ form label {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #F14E95;
-  border: 2px solid #F14E95;
+  color: rgb(238, 104, 104);
+  border: 2px solid rgb(238, 104, 104);
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #F14E95;
+  background: rgb(238, 104, 104);
   color: #fff;
 }
 
@@ -1819,7 +1719,7 @@ form label {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #F14E95;
+  border-color: rgb(238, 104, 104);
 }
 
 .row-pb-md {
